--- a/user_fitur/t-shirt/style.css
+++ b/user_fitur/t-shirt/style.css
@@ -904,7 +904,7 @@ body {
   mix-blend-mode: multiply;
 }
 
-#contenerukuran {
+/* #contenerukuran {
   position: absolute;
   bottom: 1%;
   left: 2%;
@@ -1011,7 +1011,7 @@ body {
   border-radius: 10px;
   border: 1px solid #ccc;
   background-color: white;
-}
+} */
 .load {
 /*  border: 1px solid red;*/
   position: absolute;
@@ -1168,6 +1168,104 @@ body {
   left: 16%;
   color: white;
 }
+.slider .filter-size{
+  position: absolute;
+  bottom: 5%;
+  left: 4%;
+   display: flex;
+   color:black;
+   font-size: 14px;
+   /* justify-content: space-between; */
+ }
+ .slider .filter-rotate{
+   position: absolute;
+   bottom: 1%;
+   left: 5%;
+   display: flex;
+   color:black;
+   font-size: 14px;
+    /* justify-content: space-between; */
+  }
+  .slider #input-size{
+    position: absolute;
+    bottom: 6%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #f0ec14;
+  }
+  .slider #input-rotate{
+    position: absolute;
+    bottom: 1.5%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #dfca10;
+  }
+  .slider #input-size2{
+    position: absolute;
+    bottom: 6%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #f0ec14;
+  }
+  .slider #input-rotate2{
+    position: absolute;
+    bottom: 1.5%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #dfca10;
+  }
+  .slider #input-size3{
+    position: absolute;
+    bottom: 6%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #f0ec14;
+  }
+  .slider #input-rotate3{
+    position: absolute;
+    bottom: 1.5%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #dfca10;
+  }
+  .slider #input-size4{
+    position: absolute;
+    bottom: 6%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #f0ec14;
+  }
+  .slider #input-rotate4{
+    position: absolute;
+    bottom: 1.5%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #dfca10;
+  }
+ .slider #input-size5{
+   position: absolute;
+   bottom: 6%;
+   left: 20%;
+   width: 70%;
+   height: 5px;
+   accent-color: #f0ec14;
+ }
+ .slider #input-rotate5{
+   position: absolute;
+   bottom: 1.5%;
+   left: 20%;
+   width: 70%;
+   height: 5px;
+   accent-color: #dfca10;
+ }
 
 
 @media screen and (max-width: 1200px) {
