--- a/user_fitur/t-shirt/style.css
+++ b/user_fitur/t-shirt/style.css
@@ -2128,7 +2128,7 @@ body {
   mix-blend-mode: multiply;
 }
 
-#contenerukuran {
+/* #contenerukuran {
   position: absolute;
   bottom: 1%;
   left: 2%;
@@ -2235,7 +2235,7 @@ body {
   border-radius: 10px;
   border: 1px solid #ccc;
   background-color: white;
-}
+} */
 .load {
 /*  border: 1px solid red;*/
   position: absolute;
@@ -3191,7 +3191,7 @@ body {
   left: 15%;
 }
 
-#contenerukuran {
+/* #contenerukuran {
   position: absolute;
   bottom: 1%;
   left: 1%;
@@ -3300,7 +3300,7 @@ body {
   border-radius: 10px;
   border: 1px solid #ccc;
   font-size: 50%;
-}
+} */
 #kembali {
   position: absolute;
   top:30%;
