modif tampilan hp

--- a/user_fitur/t-shirt/style.css
+++ b/user_fitur/t-shirt/style.css
@@ -2396,9 +2396,105 @@ body {
   left: 5%;
   color: white;
   font-size: 90%;
-
-
 }
+.slider .filter-size{
+  position: absolute;
+  bottom: 5%;
+  left: 4%;
+   display: flex;
+   color:black;
+   font-size: 14px;
+   /* justify-content: space-between; */
+ }
+ .slider .filter-rotate{
+   position: absolute;
+   bottom: 1%;
+   left: 5%;
+   display: flex;
+   color:black;
+   font-size: 14px;
+    /* justify-content: space-between; */
+  }
+  .slider #input-size{
+    position: absolute;
+    bottom: 6%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #f0ec14;
+  }
+  .slider #input-rotate{
+    position: absolute;
+    bottom: 1.5%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #dfca10;
+  }
+  .slider #input-size2{
+    position: absolute;
+    bottom: 6%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #f0ec14;
+  }
+  .slider #input-rotate2{
+    position: absolute;
+    bottom: 1.5%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #dfca10;
+  }
+  .slider #input-size3{
+    position: absolute;
+    bottom: 6%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #f0ec14;
+  }
+  .slider #input-rotate3{
+    position: absolute;
+    bottom: 1.5%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #dfca10;
+  }
+  .slider #input-size4{
+    position: absolute;
+    bottom: 6%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #f0ec14;
+  }
+  .slider #input-rotate4{
+    position: absolute;
+    bottom: 1.5%;
+    left: 20%;
+    width: 70%;
+    height: 5px;
+    accent-color: #dfca10;
+  }
+ .slider #input-size5{
+   position: absolute;
+   bottom: 6%;
+   left: 20%;
+   width: 70%;
+   height: 5px;
+   accent-color: #f0ec14;
+ }
+ .slider #input-rotate5{
+   position: absolute;
+   bottom: 1.5%;
+   left: 20%;
+   width: 70%;
+   height: 5px;
+   accent-color: #dfca10;
+ }
 
 }
 
@@ -2517,17 +2613,17 @@ body {
     position: absolute;
     font-size: 10px;
     left: 35%;
-    top: 76%;
+    top: 70%;
   }
 .wraper_editor #warnabg {
     position: absolute;
     right: 2.5%;
     bottom: 1%;
     width: 95%;
-    height: 17%;
+    height: 22%;
   }
 #warnabg .text {
-    font-size: 7px;
+    font-size: 10px;
     text-align: center;
 }
 #bgtextputih {
@@ -2539,38 +2635,40 @@ body {
   position: absolute;
   left: 15%;
   bottom: 10%;
+  display: none;
 }
 #bgtextbiru {
   position: absolute;
   left: 31%;
   bottom: 10%;
+  display: none;
 }
 #bgtexthijau {
   position: absolute;
-  left: 60%;
+  left: 42%;
   bottom: 10%;
 }
 #bgtextmerah {
   position: absolute;
-  left: 45%;
+  left: 22%;
   bottom: 10%;
 }
 #bgtexttf {
   position: absolute;
-  left: 70%;
+  left: 58%;
   bottom: 10%;
 }
 #bgtextupload {
   position: absolute;
-  left: 89%;
+  left: 85%;
   bottom: 10%;
 }
 #warnabg #bgputih {
   position: absolute;
   top: 5%;
   left: 1%;
-  width: calc(50px - 20px);
-  height: calc(50px - 20px);
+  width: calc(50px - 5px);
+  height: calc(50px - 5px);
   border-radius: 50%;
 }
 #warnabg #bghitam {
@@ -2579,7 +2677,8 @@ body {
   left:14%;
   width: calc(50px - 20px);
   height: calc(50px - 20px);
-  border-radius: 50%;;
+  border-radius: 50%;
+  display: none;
 }
 #warnabg #bgbiru {
   position: absolute;
@@ -2588,37 +2687,38 @@ body {
   width: calc(50px - 20px);
   height: calc(50px - 20px);
   border-radius: 50%;
+  display: none;
 }
 #warnabg #bgmerah {
   position: absolute;
   top: 5%;
-  left: 44%;
-  width: calc(50px - 20px);
-  height: calc(50px - 20px);
+  left: 20%;
+  width: calc(50px - 5px);
+  height: calc(50px - 5px);
   border-radius: 50%;
 }
 #warnabg #bghijau {
   position: absolute;
   top: 5%;
-  left: 58%;
-  width: calc(50px - 20px);
-  height: calc(50px - 20px);
+  left: 40%;
+  width: calc(50px - 5px);
+  height: calc(50px - 5px);
   border-radius: 50%;
 }
 #warnabg #bgtf {
   position: absolute;
   top: 5%;
-  left: 73%;
-  width: calc(50px - 20px);
-  height: calc(50px - 20px);
+  left: 62%;
+  width: calc(50px - 5px);
+  height: calc(50px - 5px);
   border-radius: 50%;
 }
 #warnabg #bgupload {
   position: absolute;
   top: 5%;
-  left: 88%;
-  width: calc(50px - 20px);
-  height: calc(50px - 20px);
+  left: 85%;
+  width: calc(50px - 5px);
+  height: calc(50px - 5px);
   border-radius: 50%;
 }
 
@@ -2630,18 +2730,18 @@ body {
 .wraper_editor #textkaos {
     position: absolute;
     font-size: 10px;
-    top:0%;
+    top:20%;
     left: 42%;
   }
 .wraper_editor #warnakaos {
   position: absolute;
   left: 2.5%;
-  top: 15%;
+  top: 28%;
   width: 95%;
-  height: 50%;
+  height: 40%;
 }
 #warnakaos .text {
-    font-size: 7px;
+    font-size: 10px;
     text-align: center;
 }
 #textputih {
@@ -2664,12 +2764,12 @@ body {
 }
 #textabutua {
   position: absolute;
-  top: 76%;
+  top: 42%;
   left:5%;
 }
 #textabumuda {
   position: absolute;
-  top: 96%;
+  top: 90%;
   left: 4%;
 }
 #textmerah {
@@ -2692,12 +2792,12 @@ body {
 }
 #textpink {
   position: absolute;
-  top: 76%;
+  top: 42%;
   left: 26%;
 }
 #textfanta {
   position: absolute;
-  top: 96%;
+  top: 90%;
   left: 25%;
 }
 #textnavy {
@@ -2720,12 +2820,12 @@ body {
 }
 #textbirumuda {
   position: absolute;
-  top: 76%;
+  top: 42%;
   left: 42%;
 }
 #texthijauarmy {
   position: absolute;
-  top: 96%;
+  top: 90%;
   left: 42%;
 }
 #texthijaubotol {
@@ -2748,12 +2848,12 @@ body {
 }
 #texthijaufuji {
   position: absolute;
-  top: 76%;
+  top: 42%;
   left: 63%;
 }
 #textmustard {
   position: absolute;
-  top: 96%;
+  top: 90%;
   left: 64%;
 }
 #textkuningkenari {
@@ -2776,13 +2876,13 @@ body {
 }
 #textcream {
   position: absolute;
-  top: 76%;
-  left: 87%;
+  top: 42%;
+  left: 85%;
 }
 #textcoklat {
   position: absolute;
-  top: 96%;
-  left: 87%;
+  top: 90%;
+  left: 85%;
 }
 #warnakaos #putih {
   width: calc(50px - 20px);
@@ -2817,7 +2917,7 @@ body {
   border-radius: 50%;
   position: absolute;
   left: 3%;
-  top: 40%;
+  top: 1%;
 }
 #warnakaos #abumuda {
   width: calc(50px - 5px);
@@ -2825,7 +2925,7 @@ body {
   border-radius: 50%;
   position: absolute;
   left: 3%;
-  top: 70%;
+  top: 50%;
 }
 #warnakaos #merah {
   width: calc(50px - 20px);
@@ -2860,7 +2960,7 @@ body {
   border-radius: 50%;
   position: absolute;
   left: 22%;
-  top: 40%;
+  top: 1%;
 }
 #warnakaos #fanta {
   width: calc(50px - 5px);
@@ -2868,7 +2968,7 @@ body {
   border-radius: 50%;
   position: absolute;
   left: 22%;
-  top: 70%;
+  top: 50%;
 }
 #warnakaos #navy {
   width: calc(50px - 20px);
@@ -2903,7 +3003,7 @@ body {
   border-radius: 50%;
   position: absolute;
   left: 42%;
-  top: 40%;
+  top: 1%;
 }
 #warnakaos #hijauarmy {
   width: calc(50px - 5px);
@@ -2911,7 +3011,7 @@ body {
   border-radius: 50%;
   position: absolute;
   left: 42%;
-  top: 70%;
+  top: 50%;
 }
 #warnakaos #hijaubotol {
   width: calc(50px - 20px);
@@ -2938,14 +3038,14 @@ body {
   width: calc(50px - 5px);
   height: calc(50px - 5px);
   border-radius: 50%;
-  top: 40%;
+  top: 1%;
   right: 20%;
 }
 #warnakaos #mustard {
   width: calc(50px - 5px);
   height: calc(50px - 5px);
   border-radius: 50%;
-  top: 70%;
+  top: 50%;
   right: 20%;
 }
 #warnakaos #kuningkenari {
@@ -2973,14 +3073,14 @@ body {
   width: calc(50px - 5px);
   height: calc(50px - 5px);
   border-radius: 50%;
-  top: 40%;
+  top: 1%;
   right: 1%;
 }
 #warnakaos #coklat {
   width: calc(50px - 5px);
   height: calc(50px - 5px);
   border-radius: 50%;
-  top: 70%;
+  top: 50%;
   right: 1%;
 }
 
@@ -3071,10 +3171,10 @@ body {
 #riset {
 /*  display: none;*/
   position: absolute;
-  top: -2%;
+  top: 16%;
   left: 5%;
   width: 25%;
-  height: 7%;
+  height: 10%;
   border: 1px solid #ccc;
   border-radius: 5px;
   text-decoration: none;
@@ -3084,20 +3184,20 @@ body {
 #risettext {
   position: absolute;
   left: 17%;
-  top: 3%;
+  top: 20%;
   font-size: 18px;
 }
 #back {
   position: absolute;
-  bottom: -6%;
+  bottom: -23%;
   right: 5%;
   width: 25%;
-  height: 6%;
+  height: 8.5%;
 }
 #backtext {
   position: absolute;
   left: 10%;
-  top: 10%;
+  top: 25%;
 }
 .wraper_kaos #download {
   position: absolute;
@@ -3342,5 +3442,111 @@ body {
   text-decoration: none;
   cursor: pointer;
 }
+.slider .filter-size{
+  position: absolute;
+  bottom: 5%;
+  left: 36%;
+   display: flex;
+   color:black;
+   font-size: 14px;
+   /* justify-content: space-between; */
+ }
+ .slider .filter-rotate{
+   position: absolute;
+   bottom: -6%;
+   left: 38%;
+   display: flex;
+   color:black;
+   font-size: 14px;
+    /* justify-content: space-between; */
+  }
+  .slider #input-size{
+   position: absolute;
+   bottom: 2%;
+   left: 4%;
+   width: 90%;
+   height: 5px;
+   accent-color: #f0ec14;
+   display: none;
+  }
+  .slider #input-rotate{
+   position: absolute;
+   bottom: -10%;
+   left: 4%;
+   width: 90%;
+   height: 5px;
+   accent-color: #dfca10;
+   display: none;
+  }
+  .slider #input-size2{
+    position: absolute;
+    bottom: 2%;
+   left: 4%;
+   width: 90%;
+   height: 5px;
+   accent-color: #f0ec14;
+   display: none;
+  }
+  .slider #input-rotate2{
+   position: absolute;
+   bottom: -10%;
+   left: 4%;
+   width: 90%;
+   height: 5px;
+   accent-color: #dfca10;
+   display: none;
+  }
+  .slider #input-size3{
+    position: absolute;
+    bottom: 2%;
+   left: 4%;
+   width: 90%;
+   height: 5px;
+   accent-color: #f0ec14;
+   display: none;
+  }
+  .slider #input-rotate3{
+   position: absolute;
+   bottom: -10%;
+   left: 4%;
+   width: 90%;
+   height: 5px;
+   accent-color: #dfca10;
+   display: none;
+  }
+  .slider #input-size4{
+    position: absolute;
+    bottom: 2%;
+   left: 4%;
+   width: 90%;
+   height: 5px;
+   accent-color: #f0ec14;
+   display: none;
+  }
+  .slider #input-rotate4{
+   position: absolute;
+   bottom: -10%;
+   left: 4%;
+   width: 90%;
+   height: 5px;
+   accent-color: #dfca10;
+   display: none;
+  }
+ .slider #input-size5{
+   position: absolute;
+   bottom: 2%;
+   left: 4%;
+   width: 90%;
+   height: 5px;
+   accent-color: #f0ec14;
+ }
+ .slider #input-rotate5{
+   position: absolute;
+   bottom: -10%;
+   left: 4%;
+   width: 90%;
+   height: 5px;
+   accent-color: #dfca10;
+ }
   
 }
