--- a/user_fitur/t-shirt/style.css
+++ b/user_fitur/t-shirt/style.css
@@ -341,13 +341,13 @@ body {
   cursor: pointer;
  border: 1px solid #ccc;
 }
-#abumuda {
+#color-wheel {
   position: absolute;
   right: 88%;
   top: 80%;
   height: 40px;
   width: 40px;
-  background-color: #b9b9b9;
+  /* background-color: #b9b9b9; */
   border-radius: 50%;
   margin: 5px;
   cursor: pointer;
@@ -615,7 +615,7 @@ body {
   top: 75%;
   left:2%;
 }
-#textabumuda {
+#customtext {
   position: absolute;
   top: 95%;
   left: 2%;
@@ -1562,14 +1562,13 @@ body {
   cursor: pointer;
  border: 1px solid #ccc;
 }
-#abumuda {
+#color-wheel {
   position: absolute;
   right: 88%;
   top: 80%;
   height: 30px;
   width: 30px;
-  background-color: #b9b9b9;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   margin: 5px;
   cursor: pointer;
  border: 1px solid #ccc;
@@ -1836,7 +1835,7 @@ body {
   top: 75%;
   left:2%;
 }
-#textabumuda {
+#customtext {
   position: absolute;
   top: 95%;
   left: 2%;
@@ -2767,7 +2766,7 @@ body {
   top: 42%;
   left:5%;
 }
-#textabumuda {
+#customtext {
   position: absolute;
   top: 90%;
   left: 4%;
@@ -2919,7 +2918,7 @@ body {
   left: 3%;
   top: 1%;
 }
-#warnakaos #abumuda {
+#warnakaos #color-wheel {
   width: calc(50px - 5px);
   height: calc(50px - 5px);
   border-radius: 50%;
@@ -3467,7 +3466,7 @@ body {
    width: 90%;
    height: 5px;
    accent-color: #f0ec14;
-   display: none;
+   /* display: none; */
   }
   .slider #input-rotate{
    position: absolute;
@@ -3476,7 +3475,7 @@ body {
    width: 90%;
    height: 5px;
    accent-color: #dfca10;
-   display: none;
+   /* display: none; */
   }
   .slider #input-size2{
     position: absolute;
@@ -3485,7 +3484,7 @@ body {
    width: 90%;
    height: 5px;
    accent-color: #f0ec14;
-   display: none;
+   /* display: none; */
   }
   .slider #input-rotate2{
    position: absolute;
@@ -3494,7 +3493,7 @@ body {
    width: 90%;
    height: 5px;
    accent-color: #dfca10;
-   display: none;
+   /* display: none; */
   }
   .slider #input-size3{
     position: absolute;
@@ -3503,7 +3502,7 @@ body {
    width: 90%;
    height: 5px;
    accent-color: #f0ec14;
-   display: none;
+   /* display: none; */
   }
   .slider #input-rotate3{
    position: absolute;
@@ -3512,7 +3511,7 @@ body {
    width: 90%;
    height: 5px;
    accent-color: #dfca10;
-   display: none;
+   /* display: none; */
   }
   .slider #input-size4{
     position: absolute;
@@ -3521,7 +3520,7 @@ body {
    width: 90%;
    height: 5px;
    accent-color: #f0ec14;
-   display: none;
+   /* display: none; */
   }
   .slider #input-rotate4{
    position: absolute;
@@ -3530,7 +3529,7 @@ body {
    width: 90%;
    height: 5px;
    accent-color: #dfca10;
-   display: none;
+   /* display: none; */
   }
  .slider #input-size5{
    position: absolute;
