--- a/user_fitur/t-shirt/style.css
+++ b/user_fitur/t-shirt/style.css
@@ -1571,7 +1571,6 @@ body {
   /* border-radius: 50%; */
   margin: 5px;
   cursor: pointer;
- border: 1px solid #ccc;
 }
 #merah {
   position: absolute;
@@ -2918,9 +2917,6 @@ body {
   top: 1%;
 }
 #warnakaos #color-wheel {
-  width: calc(50px - 5px);
-  height: calc(50px - 5px);
-  border-radius: 50%;
   position: absolute;
   left: 3%;
   top: 50%;
@@ -3201,6 +3197,7 @@ body {
   position: absolute;
   left: 15%;
   top: 23%;
+  font-size: medium;
 }
 .wraper_kaos #download {
   position: absolute;
