--- a/user_fitur/t-shirt/style.css
+++ b/user_fitur/t-shirt/style.css
@@ -823,6 +823,24 @@ body {
   left: 22%;
   color: white;
 }
+#front {
+  position: absolute;
+  top: 3%;
+  left:65%;
+  width: 20%;
+  height: 5%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  background: #082988;
+}
+#fronttext {
+  position: absolute;
+  top: 20%;
+  left: 27%;
+  color: white;
+}
 #kembali {
   position: absolute;
   top:40%;
@@ -1192,7 +1210,7 @@ body {
     left: 20%;
     width: 70%;
     height: 5px;
-    accent-color: #f0ec14;
+    accent-color: yellow;
   }
   .slider #input-rotate{
     position: absolute;
@@ -1200,7 +1218,7 @@ body {
     left: 20%;
     width: 70%;
     height: 5px;
-    accent-color: #dfca10;
+    accent-color: yellow;
   }
   .slider #input-size2{
     position: absolute;
@@ -1208,7 +1226,7 @@ body {
     left: 20%;
     width: 70%;
     height: 5px;
-    accent-color: #f0ec14;
+    accent-color: yellow;
   }
   .slider #input-rotate2{
     position: absolute;
@@ -1216,7 +1234,7 @@ body {
     left: 20%;
     width: 70%;
     height: 5px;
-    accent-color: #dfca10;
+    accent-color: yellow;
   }
   .slider #input-size3{
     position: absolute;
@@ -1224,7 +1242,7 @@ body {
     left: 20%;
     width: 70%;
     height: 5px;
-    accent-color: #f0ec14;
+    accent-color: yellow;
   }
   .slider #input-rotate3{
     position: absolute;
@@ -1232,7 +1250,7 @@ body {
     left: 20%;
     width: 70%;
     height: 5px;
-    accent-color: #dfca10;
+    accent-color: yellow;
   }
   .slider #input-size4{
     position: absolute;
@@ -1240,7 +1258,7 @@ body {
     left: 20%;
     width: 70%;
     height: 5px;
-    accent-color: #f0ec14;
+    accent-color: yellow;
   }
   .slider #input-rotate4{
     position: absolute;
@@ -1248,7 +1266,7 @@ body {
     left: 20%;
     width: 70%;
     height: 5px;
-    accent-color: #dfca10;
+    accent-color: yellow;
   }
  .slider #input-size5{
    position: absolute;
@@ -1256,7 +1274,7 @@ body {
    left: 20%;
    width: 70%;
    height: 5px;
-   accent-color: #f0ec14;
+   accent-color: yellow;
  }
  .slider #input-rotate5{
    position: absolute;
@@ -1264,7 +1282,7 @@ body {
    left: 20%;
    width: 70%;
    height: 5px;
-   accent-color: #dfca10;
+   accent-color: yellow;
  }
 
 
@@ -2044,6 +2062,24 @@ body {
   left: 20%;
   color: white;
 }
+#front {
+  position: absolute;
+  top: 7%;
+  left:70%;
+  width: 30%;
+  height: 5%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  background: #082988;
+}
+#fronttext {
+  position: absolute;
+  top: 18%;
+  left: 30%;
+  color: white;
+}
 #kembali {
   position: absolute;
   top:40%;
@@ -2418,7 +2454,7 @@ body {
     left: 30%;
     width: 65%;
     height: 5px;
-    accent-color: #f0ec14;
+    accent-color: yellow;
   }
   .slider #input-rotate{
     position: absolute;
@@ -2426,7 +2462,7 @@ body {
     left: 30%;
     width: 65%;
     height: 5px;
-    accent-color: #dfca10;
+    accent-color: yellow;
   }
   .slider #input-size2{
     position: absolute;
@@ -2434,7 +2470,7 @@ body {
     left: 30%;
     width: 65%;
     height: 5px;
-    accent-color: #f0ec14;
+    accent-color: yellow;
   }
   .slider #input-rotate2{
     position: absolute;
@@ -2442,7 +2478,7 @@ body {
     left: 30%;
     width: 65%;
     height: 5px;
-    accent-color: #dfca10;
+    accent-color: yellow;
   }
   .slider #input-size3{
     position: absolute;
@@ -2450,7 +2486,7 @@ body {
     left: 30%;
     width: 65%;
     height: 5px;
-    accent-color: #f0ec14;
+    accent-color: yellow;
   }
   .slider #input-rotate3{
     position: absolute;
@@ -2458,7 +2494,7 @@ body {
     left: 30%;
     width: 65%;
     height: 5px;
-    accent-color: #dfca10;
+    accent-color: yellow;
   }
   .slider #input-size4{
     position: absolute;
@@ -2466,7 +2502,7 @@ body {
     left: 30%;
     width: 65%;
     height: 5px;
-    accent-color: #f0ec14;
+    accent-color: yellow;
   }
   .slider #input-rotate4{
     position: absolute;
@@ -2474,7 +2510,7 @@ body {
     left: 30%;
     width: 65%;
     height: 5px;
-    accent-color: #dfca10;
+    accent-color: yellow;
   }
  .slider #input-size5{
    position: absolute;
@@ -2482,7 +2518,7 @@ body {
    left: 30%;
     width: 65%;
    height: 5px;
-   accent-color: #f0ec14;
+   accent-color: yellow;
  }
  .slider #input-rotate5{
    position: absolute;
@@ -2490,7 +2526,7 @@ body {
    left: 30%;
     width: 65%;
    height: 5px;
-   accent-color: #dfca10;
+   accent-color: yellow;
  }
 
 }
@@ -3199,6 +3235,24 @@ body {
   top: 23%;
   font-size: medium;
 }
+#front {
+  position: absolute;
+  top:16%;
+  right: 1%;
+  width: 25%;
+  height: 10%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  background: #082988;
+}
+#fronttext {
+  position: absolute;
+  left: 25%;
+  top: 23%;
+  font-size: medium;
+}
 .wraper_kaos #download {
   position: absolute;
   top: 1%;
@@ -3479,7 +3533,7 @@ body {
    left: 4%;
    width: 90%;
    height: 5px;
-   accent-color: #f0ec14;
+   accent-color: yellow;
    /* display: none; */
   }
   .slider #input-rotate{
@@ -3488,7 +3542,7 @@ body {
    left: 4%;
    width: 90%;
    height: 5px;
-   accent-color: #dfca10;
+   accent-color: yellow;
    /* display: none; */
   }
   .slider #input-size2{
@@ -3497,7 +3551,7 @@ body {
    left: 4%;
    width: 90%;
    height: 5px;
-   accent-color: #f0ec14;
+   accent-color: yellow;
    /* display: none; */
   }
   .slider #input-rotate2{
@@ -3506,7 +3560,7 @@ body {
    left: 4%;
    width: 90%;
    height: 5px;
-   accent-color: #dfca10;
+   accent-color: yellow;
    /* display: none; */
   }
   .slider #input-size3{
@@ -3515,7 +3569,7 @@ body {
    left: 4%;
    width: 90%;
    height: 5px;
-   accent-color: #f0ec14;
+   accent-color: yellow;
    /* display: none; */
   }
   .slider #input-rotate3{
@@ -3524,7 +3578,7 @@ body {
    left: 4%;
    width: 90%;
    height: 5px;
-   accent-color: #dfca10;
+   accent-color: yellow;
    /* display: none; */
   }
   .slider #input-size4{
@@ -3533,7 +3587,7 @@ body {
    left: 4%;
    width: 90%;
    height: 5px;
-   accent-color: #f0ec14;
+   accent-color: yellow;
    /* display: none; */
   }
   .slider #input-rotate4{
@@ -3542,7 +3596,7 @@ body {
    left: 4%;
    width: 90%;
    height: 5px;
-   accent-color: #dfca10;
+   accent-color: yellow;
    /* display: none; */
   }
  .slider #input-size5{
@@ -3551,7 +3605,7 @@ body {
    left: 4%;
    width: 90%;
    height: 5px;
-   accent-color: #f0ec14;
+   accent-color:yellow;
  }
  .slider #input-rotate5{
    position: absolute;
@@ -3559,7 +3613,7 @@ body {
    left: 4%;
    width: 90%;
    height: 5px;
-   accent-color: #dfca10;
+   accent-color: yellow;
  }
   
 }
